<resources>
    <string name="app_name">Calculadora</string>
	<string name="titulo_calculadora">CALCULADORA</string>
	<string name="numero_uno">Número Uno</string>
	<string name="numero_dos">Número Dos</string>
	<string name="calcular">Calcular</string>
	<string name="borrar">Borrar</string>
	<string name="sumar">Sumar</string>
	<string name="restar">Restar</string>
	<string name="multiplicar">Multiplicar</string>
	<string name="dividir">Dividir</string>
	<string name="error_numero_uno">Digite el número uno</string>
	<string name="error_numero_dos">Digite el número dos</string>
	<string name="error_division_cero">No se puede dividir por cero</string>

	<string-array name="operaciones">
		<item>@string/sumar</item>
		<item>@string/restar</item>
		<item>@string/multiplicar</item>
		<item>@string/dividir</item>
	</string-array>
</resources>
